# Task-Space-Control-Vision

./: DualBox.mat  DualBox_3.mat  DualBox_8.mat  K3.mat  K5ProportionalIntegral.mat  LICENSE  StepDLS.mat  StepINV.mat  StepPINV.mat  TaskSpaceControl.py  Transformations.py  URMaster.script  URMasterDual.script  record_configuration.xml  trajectoryCheck.py  trajectoryGenerator.py  ur-serial
Data/: Dual-Box-3.bag  Dual-Box-4.bag  DualBox_7.mat
Data/Bag files/: Dual-Box-6.bag  Dual-Box-9.bag
Data/Mat files/Dual arm experiment/: DualBox_2.mat
Data/Mat files/Single arm experiment/: K2.mat  K5.mat
ExperimentalData/: K05.mat
Experiments/Mat files/Dual arm experiment/: DualBox_4.mat  DualBox_5.mat  DualBox_9.mat
Experiments/Mat files/Single arm experiment/: K1.mat
Experiments/Misc/: logos.odt  objectToGrasp.blend  objectToGrasp.blend1  objectToGrasp.stl
Experiments/src/Vision - cpp/: CMakeLists.txt  camTest.c  gen_pattern.py  kinectTest.cpp  wavrecord.c
Resultados/: Dual-Box-7.bag  Dual-Box-8.bag  DualBox_6.mat
Simulations/: UR5_Movement_Test.ttt
Simulations/Matlab-VREP/: pioneer.m  single_arm_control_hardware.m
Task Space - VREP/: Dual_UR5.ttt  Dual_UR5_backup.ttt
Task Space - VREP/Matlab-VREP/: control_loop.m  control_loop_PID.m  control_loop_jacobian_transpose.m  dual_arm_simulation.m  dual_arm_simulation_position_control_acceleration.m  getRosBagInfo.m  plot_and_save.m  plot_dissertacao_controle_exp.m  plot_dissertacao_degrau.m  teste.m~
Task Space - VREP/vrep-path-plan/: path_plan_blank.ttt
generatedPaths/UR5/: Error.npy
(+130 files in other folders)
